syntax = "proto3";

package qa;

option go_package = "github.com/didil/simple-text-rag-go-frontend/grpc_gen";

// The request message containing the name and
// file_url for creating a collection
message CreateCollectionRequest {
  string name = 1;
  string file_url = 2;
}

message CreateCollectionResponse {}

// The request message containing the question and collection name for getting
// an answer
message GetAnswerRequest {
  string collection_name = 1;
  string question = 2;
}

// The response message containing the answer text
message Answer { string text = 1; }

// The qa service definition
service QAService {
  // Creates a new collection
  rpc CreateCollection(CreateCollectionRequest)
      returns (CreateCollectionResponse);

  // Gets an answer for a given question from the specified collection
  rpc GetAnswer(GetAnswerRequest) returns (Answer);
}
